# shigure-edr

./: .gitignore  GOAL.md  PROGRESS.md  README.md  pyproject.toml
agent/: go.mod  go.sum
configs/: detection-rules.example.yaml  provider.example.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT_V1.md  LOAD_TESTING.md  M0_E2E.md  PROTOTYPE_P0.md  RELEASE_VALIDATION.md  RESPONSE_TOOLBOX.md  SHIGURE_NAMING_COMPATIBILITY.md  SPEC.md  WINDOWS_ETW_PROCESS_LAB.md  WINDOWS_EVENT_LOG_SUBSCRIPTION_LAB.md  WINDOWS_RELEASE_LAB.md  WINDOWS_SIGNED_RELEASE_PATH.md
open_edr_mdr_agent/: cli.py
scripts/: load_sim.py  m0_smoke.sh  prototype_config_demo.sh  prototype_config_quiet.sh  prototype_start.sh  prototype_stop.sh  prototype_validate.sh  release_validation.py
tests/: conftest.py  test_agent_credential_lifecycle.py  test_agent_evidence_upload.py  test_agent_filters.py  test_agent_health_detection.py  test_agent_lookup.py  test_agent_spool_health.py  test_alert_filters.py  test_api_m0.py  test_case_filters.py  test_cases.py  test_clickhouse_projection_profile.py  test_config_validation.py  test_control_plane_store_profile.py  test_detection.py  test_enrollment_tokens.py  test_event_query_dimensions.py  test_fidelis_parity_api.py  test_investigation_api.py  test_local_provider.py  test_mdr_workspace_loop.py  test_postgres_control_plane_store.py  test_process_graph_api.py  test_production_guardrails.py  test_raw_evidence_list.py  test_raw_evidence_object_storage.py  test_release_validation_harness.py  test_rule_loader.py  test_saved_hunt_update.py  test_saved_hunts.py  test_task_lookup.py  (+9 more)
(+82 files in other folders)
